<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="kinvey_account">Kinvey</string>
    <string name="app_name">Vicinity</string>
    <string name="enter_email">Email Address</string>
    <string name="enter_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_first_name">First Name</string>
    <string name="enter_last_name">Last Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_google">Login with Google+</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="welcome">Welcome!</string>
    <string name="facebook_app_id">your_facebook_signin</string>
    <string name="account_type">kinvey</string>
    <string name="logout">Logout</string>
    <string name="please_wait">Please wait..</string>
    <string name="internet_trouble">Looks like you are not connected.</string>
    <string name="title_activity_add_event">AddEventActivity</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_event">Add New Event</string>
    <string name="title_activity_add_location">AddLocationActivity</string>
    <string name="add_new_location">Add New Location</string>
    <string name="add_event">Add Event</string>
    <string name="add_location">Add Location</string>
    <string name="event_title">Title</string>
    <string name="event_description">Description</string>
    <string name="vicinity_radius">Vicinity Radius</string>
    <string name="enter_radius">Enter vicinity radius </string>
    <string name="unit_type">in kilometers (less than 40)</string>
    <string name="instruction">No category has been chosen yet! Please choose a category from the navigation drawer.</string>
    <string name="website_unavailable">Website not available</string>
    <string name="phone_unavailable">Phone not available</string>
    <string name="address_unavailable">Address not available</string>
    <string name="rating_unavailable">Rating not available</string>
    <string name="review_unavailable">Reviews not available</string>
    <string name="navigate">Navigate</string>
    <string name="save">Save</string>
    <string name="saved_places">Saved Places</string>
    <string name="no_saved_places">There are no saved places yet!</string>
    <string name="delete">Delete</string>
    <string name="choose_category">Please choose a category below :</string>
    <string name="no_nearby_places">There are no nearby places in this category.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <array name="drawer_titles">
        <item>@string/atm</item>
        <item>@string/bakery</item>
        <item>@string/bank</item>
        <item>@string/bars</item>
        <item>@string/bookstore</item>
        <item>@string/department</item>
        <item>@string/doctor</item>
        <item>@string/hospital</item>
        <item>@string/hotels</item>
        <item>@string/movie_theatre</item>
        <item>@string/park</item>
        <item>@string/petrol</item>
        <item>@string/pharmacy</item>
        <item>@string/police</item>
        <item>@string/post_office</item>
        <item>@string/restaurant</item>
        <item>@string/saloon</item>
        <item>@string/school</item>
        <item>@string/temple</item>
    </array>

    <string name="atm">ATM</string>
    <string name="bakery">Bakery</string>
    <string name="bank">Banks</string>
    <string name="bars">Bars</string>
    <string name="bookstore">Bookstore</string>
    <string name="department">Departmental Stores</string>
    <string name="doctor">Doctors</string>
    <string name="hospital">Hospital</string>
    <string name="hotels">Hotels</string>
    <string name="movie_theatre">Movie Theatres</string>
    <string name="park">Parks</string>
    <string name="petrol">Petrol Pumps</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="police">Police Station</string>
    <string name="post_office">Post Office</string>
    <string name="restaurant">Restaurants</string>
    <string name="saloon">Saloon</string>
    <string name="school">Schools</string>
    <string name="temple">Temple</string>


    <string name="atm_code">atm</string>
    <string name="bakery_code">bakery</string>
    <string name="bank_code">bank</string>
    <string name="bars_code">bar</string>
    <string name="bookstore_code">book_store</string>
    <string name="department_code">department_store</string>
    <string name="doctor_code">doctor</string>
    <string name="hospital_code">hospital</string>
    <string name="hotels_code">lodging</string>
    <string name="movie_theatre_code">movie_theater</string>
    <string name="park_code">park</string>
    <string name="petrol_code">gas_station</string>
    <string name="pharmacy_code">pharmacy</string>
    <string name="police_code">police</string>
    <string name="post_office_code">post_office</string>
    <string name="restaurant_code">restaurant</string>
    <string name="saloon_code">hair_care</string>
    <string name="school_code">school</string>
    <string name="temple_code">hindu_temple</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="map_view">Map View</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_place_details">PlaceDetailsActivity</string>
    <string name="title_activity_saved_location">SavedLocationActivity</string>

    <!--com.kinvey.myapplogin-->
</resources>
