<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PlaceDetailsActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_savedPlaces"
        android:orderInCategory="50"
        android:title="@string/saved_places"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/save"
        android:icon="@drawable/ic_action_save"
        app:showAsAction="always"/>
</menu>