<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".RegisterNewAccountActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/enter_first_name"
        android:inputType="textPersonName"
        android:textColor="@color/ebony"
        android:textColorHint="@color/hint_color" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_last_name"
        android:inputType="textPersonName"
        android:layout_margin="5dp"
        android:textColor="@color/ebony"
        android:textColorHint="@color/hint_color" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:layout_margin="5dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/ebony"
        android:textColorHint="@color/hint_color" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="@color/primaryText"
        android:textColorHint="@color/hint_color" />

    <EditText
        android:id="@+id/etPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/primaryText"
        android:textColorHint="@color/hint_color" />

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="4dp">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="@android:color/transparent"
            android:textColor="@color/white" />
    </android.support.v7.widget.CardView>

</LinearLayout>