<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <!--<EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType=""
        android:textColor="" />-->


    <EditText
        android:id="@+id/etEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/enter_email"
        android:cursorVisible="true"
        android:inputType="textEmailAddress"
        android:textColor="@color/ebony"
        android:textColorHint="@color/hint_color" />


    <EditText
        android:layout_margin="5dp"
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:cursorVisible="true"
        android:textColor="@color/ebony"
        android:textColorHint="@color/hint_color" />


    <TextView
        android:id="@+id/tvErrorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/secondaryText" />

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="4dp">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/login"
            android:textColor="@color/white" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="@color/google_red"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="4dp">

        <Button
            android:id="@+id/btnLoginGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/login_google"
            android:textColor="@color/white" />
    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@color/divider" />

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="4dp">

        <Button
            android:id="@+id/btnRegisterAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/register"
            android:textColor="@color/white" />
    </android.support.v7.widget.CardView>

</LinearLayout>